--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database configuration
-VET_DB_NAME=mitambatra
+VET_DB_NAME=mitambatra1
 VET_DB_USER=postgres
 VET_DB_PASSWORD=postgres
 VET_DB_HOST=localhost
