--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Database configuration
-VET_DB_NAME=test_atambatra
-VET_DB_USER=postgres
-VET_DB_PASSWORD=postgres
+VET_DB_NAME=mitambatra1
+VET_DB_USER=fabien
+VET_DB_PASSWORD=123Fabien$
 VET_DB_HOST=localhost
 VET_DB_PORT=5432
