test: deployment and requirements

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Database configuration
-VET_DB_NAME=mitambatra2
-VET_DB_USER=fabien
-VET_DB_PASSWORD=123Fabien$
-VET_DB_HOST=localhost
+VET_DB_NAME=vet_conseil
+VET_DB_USER=vet_conseil_user
+VET_DB_PASSWORD=04mRKkLmq9wnGh6TlMonDAKY6fj0GZoI
+VET_DB_HOST=https://dpg-ciir7gt9aq012eu6ttk0-a.singapore-postgres.render.com
 VET_DB_PORT=5432
